[pom] Remove attach self from argline