@@ -78,7 +78,7 @@
     <mybatis-thymeleaf.version>1.0.4</mybatis-thymeleaf.version>
     <spring-boot.version>3.1.3</spring-boot.version>
 
-    <argLine>-Djdk.attach.allowAttachSelf --add-opens java.base/java.lang=ALL-UNNAMED -Dfile.encoding=UTF-8</argLine>
+    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED -Dfile.encoding=UTF-8</argLine>
 
     <!-- Reproducible Builds -->
     <project.build.outputTimestamp>1684572441</project.build.outputTimestamp>
